# reflectica

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  init_minio.py  pyproject.toml  run_migrations.sh
alembic/: env.py
alembic/versions/: 001_initial_schema.py
app/bot/: entry_summary.py  handlers.py  keyboards.py  main.py
app/db/: __init__.py  models.py  session.py
app/gemini/: __init__.py  client.py
app/scheduler/: beat_schedule.py
app/storage/: __init__.py  minio_client.py
app/tasks/: celery_app.py  processing.py  reminders.py
app/utils/: file_utils.py  logging.py  timezone.py
